--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -590,15 +590,7 @@
             <code>aria-labelledby=&quot;ID_REF&quot;</code>
           </th>
           <td><code>div</code></td>
-          <td>In examples 1 and 2, refers to the element that labels the grid.</td>
-        </tr>
-        <tr>
-          <td></td>
-          <th scope="row">
-            <code>aria-label=&quot;Search Results&quot;</code>
-          </th>
-          <td><code>div</code></td>
-          <td>In example 3, the grid does not have a visible label so the label is specified with <code>aria-label</code>.</td>
+          <td>Refers to the element that labels the grid.</td>
         </tr>
         <tr>
           <td></td>
