style changed and aria-pressed removed for menubutton

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -47,7 +47,7 @@
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
         <div class="toolbar" role="toolbar" aria-label="Toolbar">
-          <div class="group">
+          <div class="group characteristics">
             <div role="button" class="toolbar-item bold" aria-pressed="false" value="bold" tabindex="0">
               <i class="fas fa-bold"></i>
             </div>
@@ -58,7 +58,7 @@
               <i class="fas fa-underline"></i>
             </div>
           </div>
-          <div class="group">
+          <div class="group align">
             <div role="button" class="toolbar-item textAlign" aria-pressed="true" value="left" tabindex="1">
               <i class="fas fa-align-left"></i>
             </div>
@@ -84,7 +84,7 @@
               aria-controls="menu1"
               tabindex="1"
               class=" toolbar-item menu-button">
-              Font
+              <b>Fonts</b>
           </div>
             <ul role="menu" id="menu1">
               <li role="menuitem">Sans-serif</li>
