--- a/examples/forms/popup-error.html
+++ b/examples/forms/popup-error.html
@@ -7,12 +7,12 @@
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
 <link rel="stylesheet" href="../css/core.css">
-<script src="../js/examples.js" type="text/javascript"></script>
+<script src="../js/examples.js"></script>
 <script src="../js/highlight.pack.js"></script>
 <script src="../js/app.js"></script>
 
 <link href="css/popup-error.css" rel="stylesheet">
-<script src="js/popup-error.js" type="text/javascript"></script>
+<script src="js/popup-error.js"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
@@ -384,8 +384,8 @@
              aria-invalid="false"
              type="text"
              size="9"
-             aria-errormessage="id-date-error"
-             aria-describedby="id-date-inst"
+             aria-errormessage="id-card-date-error"
+             aria-describedby="id-card-ate-inst"
              onblur="validateCardDate()">
         <span id="id-card-date-error" class="noerror" role="status">
         </span>
@@ -436,7 +436,6 @@
   </section>
 
 </div>
-</section>
 
 
   <section>
