--- a/examples/forms/popup-error.html
+++ b/examples/forms/popup-error.html
@@ -385,7 +385,7 @@
              type="text"
              size="9"
              aria-errormessage="id-card-date-error"
-             aria-describedby="id-card-ate-inst"
+             aria-describedby="id-card-date-inst"
              onblur="validateCardDate()">
         <span id="id-card-date-error" class="noerror" role="status">
         </span>
