--- a/examples/forms/popup-error.html
+++ b/examples/forms/popup-error.html
@@ -432,7 +432,9 @@
      value="Submit Order"
      onClick="submitOrder()">
 
-      <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
+   </div>
+
+    <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
 
   <section>
