fixed validation bugs

--- a/examples/forms/popup-error.html
+++ b/examples/forms/popup-error.html
@@ -318,6 +318,7 @@
               onChange="setCardType()"
               onblur="validateCardType()"
               >
+              <option>no cards available</option>
         </select>
         <span id="id-card-error" class="noerror" role="status">
         </span>
