fixed validation error

--- a/examples/forms/popup-error.html
+++ b/examples/forms/popup-error.html
@@ -317,7 +317,7 @@
               aria-errormessage="id-card-error"
               onChange="setCardType()"
               onblur="validateCardType()">
-              <option value=""></option>
+              <option value="" label="no cards available"></option>
         </select>
         <span id="id-card-error" class="noerror" role="status">
         </span>
