--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4497,7 +4497,7 @@
     <h2>Appendices</h2>
 
 
-    <section id="change_log" class="appendix">
+    <section id="example_index" class="appendix">
       <h3>Indexes of Examples</h3>
 
       <section id="examples_by_roles" class="appendix">
