--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -110,7 +110,7 @@ document.addEventListener('DOMContentLoaded', function () {
       The div for the rendered HTML source is in the last section of the page.
     -->
     <div id="ex1">
-      <table id="treegrid" role="treegrid" aria-label="ARIA treegrid e-mail inbox example">
+      <table id="treegrid" role="treegrid" aria-label="Inbox">
         <colgroup>
           <col id="treegrid-col1">
           <col id="treegrid-col2">
@@ -118,48 +118,48 @@ document.addEventListener('DOMContentLoaded', function () {
         </colgroup>
         <thead>
           <tr>
-            <th role="columnheader">Subject</th>
-            <th role="columnheader">Summary</th>
-            <th role="columnheader">Email</th>
+            <th scope="col">Subject</th>
+            <th scope="col">Summary</th>
+            <th scope="col">Email</th>
           </tr>
         </thead>
         <tbody>
-          <tr role="row" aria-level="1" aria-posinset="1" aria-setsize="1" aria-expanded="true">
+          <tr aria-level="1" aria-posinset="1" aria-setsize="1" aria-expanded="true">
             <td role="gridcell">Treegrids are awesome</td>
             <td role="gridcell">Want to learn how to use them?</td>
             <td role="gridcell"><a href="mailto:aaron@thegoogle.rocks">aaron@thegoogle.rocks</a></td>
           </tr>
-          <tr role="row" aria-level="2" aria-posinset="1" aria-setsize="3">
+          <tr aria-level="2" aria-posinset="1" aria-setsize="3">
              <td role="gridcell">re: Treegrids are awesome</td>
              <td role="gridcell">I agree with you, they are the shizzle</td>
              <td role="gridcell"><a href="mailto:joe@blahblahblah.blahblah">joe@blahblahblah.blahblah</a></td>
           </tr>
-          <tr role="row" aria-level="2" aria-posinset="2" aria-setsize="3" aria-expanded="false">
+          <tr aria-level="2" aria-posinset="2" aria-setsize="3" aria-expanded="false">
              <td role="gridcell">re: Treegrids are awesome
              <td role="gridcell">They are great for showing a lot of data, like a grid
              <td role="gridcell"><a href="mailto:billy@dangerous.fish">billy@dangerous.fish</a></td>
           </tr>
-          <tr role="row" aria-level="3" aria-posinset="1" aria-setsize="1" class="hidden">
+          <tr aria-level="3" aria-posinset="1" aria-setsize="1" class="hidden">
              <td role="gridcell">re: Treegrids are awesome</td>
              <td role="gridcell">Cool, we've been needing an example and documentation</td>
              <td role="gridcell"><a href="mailto:doris@rufflazydogs.sleep">doris@rufflazydogs.sleep</a></td>
           </tr>
-          <tr role="row" aria-level="2" aria-posinset="3" aria-setsize="3" aria-expanded="false">
+          <tr aria-level="2" aria-posinset="3" aria-setsize="3" aria-expanded="false">
              <td role="gridcell">re: Treegrids are awesome</td>
              <td role="gridcell">I hear the Fancytree library is going to align with this example!</td>
              <td role="gridcell"><a href="mailto:someone@please-do-it.company">someone@please-do-it.company</a></td>
           </tr>
-          <tr role="row" aria-level="3" aria-posinset="1" aria-setsize="1" aria-expanded="false" class="hidden">
+          <tr aria-level="3" aria-posinset="1" aria-setsize="1" aria-expanded="false" class="hidden">
              <td role="gridcell">re: Treegrids are awesome</td>
              <td role="gridcell">Sometimes they are more like trees, otherse are more like grids</td>
              <td role="gridcell"><a href="mailto:mari@beingpractical.com">mari@beingpractical.com</a></td>
           </tr>
-          <tr role="row" aria-level="4" aria-posinset="1" aria-setsize="2" class="hidden">
+          <tr aria-level="4" aria-posinset="1" aria-setsize="2" class="hidden">
              <td role="gridcell">re: Treegrids are awesome</td>
              <td role="gridcell">Cool, when it's a tree, let's keep left/right to collapse/expand</td>
              <td role="gridcell"><a href="mailto:issie@imadeadcatsadly.wascute">issie@imadeadcatsadly.wascute</a></td>
           </tr>
-          <tr role="row" aria-level="4" aria-posinset="2" aria-setsize="2" class="hidden">
+          <tr aria-level="4" aria-posinset="2" aria-setsize="2" class="hidden">
              <td role="gridcell">re: Treegrids are awesome
              <td role="gridcell">I see, sometimes right arrow moves by column</td>
              <td role="gridcell"><a href="mailto:kitten@kittenseason.future">kitten@kittenseason.future</a></td>
