--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -87,9 +87,18 @@ document.addEventListener('DOMContentLoaded', function () {
     can be used to make an interactive tree that enables users to both navigate the hierarchical structure of email conversations
     and also navigate elements that describe each email, such as subject and sender.
   </p>
+  <p>Similar examples include: </p>
+  <ul>
+    <li><a href="../grid/dataGrids.html">Data Grid Examples</a>: Three example implementations of grid that include features relevant to presenting tabular information, such as content editing, sort, and column hiding.</li>
+    <li><a href="../treeview/treeview-1/treeview-1a.html">File Directory Treeview using <em>computed</em> properties</a></li>
+    <li><a href="../treeview/treeview-1/treeview-1b.html">File Directory Treeview using <em>declared</em> properties</a></li>
+    <li><a href="../treeview/treeview-2/treeview-2a.html">Navigation Treeview using <em>computed</em> properties</a></li>
+    <li><a href="../treeview/treeview-2/treeview-2b.html">Navigation Treeview using <em>declared</em> properties</a></li>
+  </ul>
+  <h2>Example Useage Options</h2>
   <p>
     This example demonstrates three different ways of implementing the keyboard navigation specified in the treegrid pattern.
-    Activating the following links changes the behavior of the navigation keys as described:
+    The following links change the behavior of the navigation keys :
   </p>
   <ul>
     <li id="option-cell-focus-allow">
@@ -110,14 +119,13 @@ document.addEventListener('DOMContentLoaded', function () {
   <p>
     Note: A row-only option is not provided.
     A treegrid where cells cannot be focused would be implemented as a <a href="../../#TreeView">tree view</a>.
-    A treeview that has columns in its visual presentation may be appropriate when:
+    A treeview that has columns in its visual presentation may be appropriate when all the following conditions are present:
   </p>
   <ul>
     <li>Columns are guaranteed to fit horizontally (no horizontal scrolling necessary).</li>
     <li>Columns are merely for attractive presentation; there is no need to navigate them individually.</li>
     <li>A screen reader user can easily understand the UI when all information in a row is announced as a single string without any separation.</li>
   </ul>
-
   <section>
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
