Add validation error note

--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -467,6 +467,11 @@ document.addEventListener('DOMContentLoaded', function () {
         </tr>
               </tbody>
     </table>
+    <p>
+      <strong>NOTE:</strong> Due to an error in the ARIA 1.1 specification, the <code>aria-posinset</code> and <code>aria-setsize</code> properties are not supported on row elements.
+      This is being corrected in ARIA 1.2.
+      Consequently, when validating the HTML in this example, errors are generated.
+    </p>
   </section>
 
   <section>
