fix html errors

--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -372,8 +372,8 @@ document.addEventListener('DOMContentLoaded', function () {
         </tr>
         <tr>
           <td></td>
-          <th scope="row"><code>tabindex="-1"></code></th>
-          <td><code>tr, td</code></td>
+          <th scope="row"><code>tabindex="-1"</code></th>
+          <td><code>tr</code> or <code>td</code></td>
           <td>
             <ul>
               <li>Makes the element focusable without including it in the tab sequence of the page.</li>
@@ -384,7 +384,7 @@ document.addEventListener('DOMContentLoaded', function () {
         <tr>
           <td></td>
           <th scope="row"><code>tabindex="0"</code></th>
-          <td><code>tr, td</code></td>
+          <td><code>tr</code> or <code>td</code></td>
           <td>
             <ul>
               <li>Includes the element in the tab sequence.</li>
@@ -428,7 +428,7 @@ document.addEventListener('DOMContentLoaded', function () {
         <tr>
           <td>
           </td>
-          <th scope="row"><code>aria-level="<em>number</em>"></code></th>
+          <th scope="row"><code>aria-level="<em>number</em>"</code></th>
           <td><code>tr</code></td>
           <td>
             <ul>
@@ -441,7 +441,7 @@ document.addEventListener('DOMContentLoaded', function () {
         <tr>
           <td>
           </td>
-          <th scope="row"><code>aria-setsize="em>number</em>"</code></th>
+          <th scope="row"><code>aria-setsize="<em>number</em>"</code></th>
           <td><code>tr</code></td>
           <td>
             Defines the number of rows in the set of rows that are in the same branch and at the same level within the hierarchy.
