Add 2 missing  symbols.

--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -374,7 +374,7 @@ document.addEventListener('DOMContentLoaded', function () {
           <td>
             <ul>
               <li>Identifies the element as a <code>row</code>.</li>
-              <li>The <code>row</code role is not an implicit semantic for the <code>tr</code> element when in a <code>treegrid</code>.</li>
+              <li>The <code>row</code> role is not an implicit semantic for the <code>tr</code> element when in a <code>treegrid</code>.</li>
             </ul>
           </td>
         </tr>
@@ -474,7 +474,7 @@ document.addEventListener('DOMContentLoaded', function () {
           <td>
             <ul>
               <li>Identifies the element as a <code>gridcell</code>.</li>
-              <li>The <code>gridcell</code role is not an implicit semantic for the <code>td</code> element when in a <code>treegrid</code>.</li>
+              <li>The <code>gridcell</code> role is not an implicit semantic for the <code>td</code> element when in a <code>treegrid</code>.</li>
             </ul>
           </td>
         </tr>
